--- a/src/app/sidebr/sidebr.component.html
+++ b/src/app/sidebr/sidebr.component.html
@@ -10,7 +10,13 @@
   
     <mat-sidenav #sidenav="matSidenav" class="mat-elevation-z8">
   
-      <img class="avatar mat-elevation-z8" src="assets/img_avatar2.png" />
+      <div class="profile-pic-div">
+        <img [src]="url" id="photo"  class="avatar mat-elevation-z8">
+        <input type="file" id="file" (change)="onselectFile($event)" >
+        <br>
+        <label for="file" id="uploadBtn">Changer photo</label>
+      </div>
+  
   
       <h4 class="name">Nom Prenom</h4>
       <p class="designation">fonction</p>
@@ -25,7 +31,7 @@
       </button>
 
       <button mat-button class="menu-button" routerLink="/demandes">
-        <mat-icon>library_books</mat-icon>
+        <i class="fa-solid fa-folder"></i> &nbsp;
         <span>Les demandes</span>
       </button>
   
@@ -39,6 +45,7 @@
     </mat-sidenav>
     <mat-sidenav-content>
         <div class="content" class="content mat-elevation-z4">
+          <router-outlet></router-outlet>
             </div>
  </mat-sidenav-content>
 </mat-sidenav-container>
