--- a/src/app/sidebr/sidebr.component.css
+++ b/src/app/sidebr/sidebr.component.css
@@ -12,6 +12,22 @@ body{
       margin-top: 2px;
      
     }
+    #file{
+      display: none;
+    }
+    #uploadBtn{
+   
+  
+     text-align: center;
+     color: wheat;
+     line-height: 10px;
+     font-family: sans-serif;
+     font-size: 10px;
+     cursor: pointer;
+     filter: blur(2);
+     
+     
+    }
    
     .hh{
       margin-left: 1%;
@@ -19,7 +35,7 @@ body{
      
     mat-sidenav {
       margin: 10px;
-      width: 210px;
+      width: 280px;
       border-right: none;
       background: #009b72;
       color: white;
@@ -30,19 +46,17 @@ body{
    }
   
    .content{
-      height: 880px;
-      margin: 16px;
-      margin-left: 32px;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-  
-      font-size: 2rem;
-      color: black;
-      background-color: rgb(255, 254, 254);
-  
-      border-radius: 10px;
-         }
+    height: 900px;
+    margin: 16px;
+    margin-left: 20px;
+   
+     justify-content: center;
+    font-size: 18px;
+    color: black;
+    background-color: rgb(255, 254, 254);
+
+    border-radius: 10px;
+       }
   
   
          .menu-button {
@@ -81,5 +95,5 @@ body{
               
   
    mat-sidenav-container{
-      height: calc(100vh - 65px);
+    height:inherit;
                }
